operations/k8s/base/indexer-service.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: indexer-service
  labels:
    role: indexer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: indexer-api
  template:
    metadata:
      labels:
        role: indexer-api
    spec:
      containers:
      - name: indexer-service
        image: commerceexperts/ocs-indexer-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8535
          name: indexer-api
        resources:
          limits:
            memory: 3256Mi
          requests:
            memory: 3256Mi
