operations/k8s/base/search-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    role: search-api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: search-api
  template:
    metadata:
      labels:
        role: search-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: role
                operator: In
                values:
                - search-api
            topologyKey: kubernetes.io/hostname
      containers:
      - name: search-service
        image: commerceexperts/ocs-search-service:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 1024Mi
        ports:
        - containerPort: 8534
          name: search-api
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8534
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8534
