operations/k8s/base/indexer-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: indexer-api-service
  labels:
    role: indexer-api
spec:
  selector:
    role: indexer-api
  ports:
  - name: indexer-api
    port: 8535
