operations/k8s/base/search-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api-service
  labels:
    role: search-api
spec:
  selector:
    role: search-api
  ports:
  - name: search-api
    port: 8534
