operations/k8s/base/suggest-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: suggest-api-service
  labels:
    role: suggest-api
spec:
  selector:
    role: suggest-api
  ports:
  - name: suggest-api
    port: 8081
