operations/k8s/base/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    role: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type:  "basic"
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: ingress-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'OCS Authentication Required'
spec:
  rules:
  - http:
      paths:
      - path: /search-api
        backend:
          serviceName: search-api-service
          servicePort: search-api
      - path: /indexer-api
        backend:
          serviceName: indexer-api-service
          servicePort: indexer-api
