operations/k8s/base/indexer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indexer-ingress
  labels:
    role: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /indexer-api
        pathType: Prefix
        backend:
          service:
            name: indexer-api-service
            port:
              name: indexer-api
