operations/k8s/base/search-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
  labels:
    role: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /search-api
        pathType: Prefix
        backend:
          service:
            name: search-api-service
            port:
              name: search-api
